dev/non_executable_reasons_record/195.txt
3.6
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
%%bash
name=HelloWorld

### ã‚½ãƒ¼ã‚¹ã®ç·¨é›†
cat <<- EOS > ${name}.java
public class ${name} {
    public static void main (String[] args) {
        System.out.println("Hello World !!");
    }
}
EOS

### ã‚½ãƒ¼ã‚¹ã®ç¢ºèª
cat ${name}.java

### ã‚³ãƒ³ãƒ‘ã‚¤ãƒ«
javac ${name}.java

### å®Ÿè¡Œ
echo "================================================"
java ${name}
------------------

[0;36m  File [0;32m"<ipython-input-1-1fda45063530>"[0;36m, line [0;32m7[0m
[0;31m    cat <<- EOS > ${name}.java[0m
[0m                  ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-1fda45063530>, line 7)

Executability                            : False
